# ChangeLog for dev-perl/locale-maketext-lexicon
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.77 2012/12/08 11:30:43 tove Exp $

*locale-maketext-lexicon-0.920.0 (08 Dec 2012)

  08 Dec 2012; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.920.0.ebuild, metadata.xml:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  28 Apr 2012; Alexis Ballier <aballier@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  keyword ~amd64-fbsd

  05 Apr 2012; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.82.ebuild:
  Cleanup

  31 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  ia64/sparc stable wrt #400301

  31 Mar 2012; Tobias Klausmann <klausman@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  Stable on alpha, bug #400301

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  x86 stable wrt bug #400301

  24 Feb 2012; Jeroen Roovers <jer@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  Stable for HPPA (bug #400301).

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  Stable for amd64, wrt bug #400301

  04 Sep 2011; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.870.0.ebuild,
  -locale-maketext-lexicon-0.880.0.ebuild:
  Cleanup

*locale-maketext-lexicon-0.910.0 (21 Aug 2011)

  21 Aug 2011; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.910.0.ebuild:
  Version bump

*locale-maketext-lexicon-0.880.0 (01 Aug 2011)

  01 Aug 2011; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.880.0.ebuild:
  Version bump

  29 Jul 2011; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.860.ebuild:
  Cleanup

*locale-maketext-lexicon-0.870.0 (20 Jul 2011)

  20 Jul 2011; Torsten Veller <tove@gentoo.org>