@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST Locale-Maketext-Lexicon-0.91.tar.gz 123815 SHA256 dd9b52d1893446536e72bb19332a4952afccd6707986b64740e9c28524892d4e SHA512 7d08917712590c30c755645b02fe93353e59a2a5a344cc64d539adc2d7ff978fc10c48cb2f254dd75cba7df79d774649d90970e45d83171ef535db1f84400f60 WHIRLPOOL cb58bdbe72f1b1a9a80f04ae2fc2f9811bfbb2298bb1d4ebd29c0b37dca0c8cb4612af876f2e76cf3218845c4f63238810b041f2f085db8752253980c8c07bdb
 DIST Locale-Maketext-Lexicon-0.92.tar.gz 122825 SHA256 ff9a55ef66407973852bc0186e146f338512881205229dd1a0e02a436520b672 SHA512 572755bd54d718733509ffbfa8c353037b12c05ad19a633de19b58efd08fa0508f7c950c9bce00ed68f3b3658290b25ff6083cf136e36bab505bcfb254c35c82 WHIRLPOOL 0dd772098e907fb70500e81f047baccdb8870a3548ab5d6fe0862ff96a7e46ea90b9c98c852516fc8e46dfc29b218d25db03effb602704694be2d7edee222626
 EBUILD locale-maketext-lexicon-0.910.0.ebuild 615 SHA256 8fa1662a3362cdb2afc70eb183ba74faf61c1d142e6a69278ed5f53eaed0dc32 SHA512 3ae446fbff88112236097c8e05c410f8ae852b8fe2823d76f04088e32c90a4f6fdd143dfbd0d4ee09a867d348cade04f186a54a096d3dbfeb900966978670f2b WHIRLPOOL 4a1c1492d647299bc779276e8bb1147ad89ff286389a24ee8033cb65a17344874f9230485a4157698d80a8b62b10e18ecd9fbfbb52346c14c7749a616518f422
-EBUILD locale-maketext-lexicon-0.920.0.ebuild 628 SHA256 37d7e270bf7d636632cc577540c184ad0e3ececded692e4ad9043800da4869f3 SHA512 d319119624375ff60b33caa3ac59006c0e2d80091a294f93da7c846c032ad9d8054e1dbe633efeaf175257cd49629d5f82b03608814bef16973951302f8bce69 WHIRLPOOL 5b9efb12227cb12ee4c995afb8fbba5908c0de61dde4e4630e337cf2fcd7282c5cb5b4e444a86bc4feb036609807e906a4d7bb04174c8301048db051a0f7d998
-MISC ChangeLog 11392 SHA256 2a0ebdd6401608bbe78826bae27adcd9ed6d08de0795aeade84388cce07387a6 SHA512 8f07ff5d994572a1f8ae369ba9749f8720978b348062c584c848e6282b140fd7d76fbf3b56cce8dcd80bb96cd015a51fd20e7032a1e6eecb06361712da7b7f12 WHIRLPOOL aa753bb59ae03e8ecc5a35ba478bdfcc2f2924d25ef351f4782a50e0e3c00b390b17acb35f14a66001efe334b72d37fbb29435e13a1a19e993459436e8b3efef
+EBUILD locale-maketext-lexicon-0.920.0.ebuild 626 SHA256 f2dc6e773b8ec01a50a8b7fe21871ee58a21a4ee7ab1ee7c70a59326678d86c5 SHA512 3dfb9eacf8cb460bb4bfebe88f8c48b2838a2b3062516941c42c78c6a8fc933b807ae25f3cd0e5979c12dba6ce83bd805a92d1cf24466f32697c0a2aeda04484 WHIRLPOOL 89a545dcbe1c8fe73b5720bb2efe4ad001838de63241d4c1de6b1f2a6149e0932f88ba8a46b5fcb98001fb103af412f17b5194d7b267418576e47ddefa3d68a7
+MISC ChangeLog 11519 SHA256 149f0f6a92792a8f95c3d52740d25d3a7df2df5ed7d65fba47e7d9ea2d88c4e9 SHA512 1d3ec8384e8223218e0bdee100ce06f3e3a251251ae5fe564df637fdadbb4216157db4c4f76e7cb9f3d908eee96db84e4165016cd27ee794c5f695ddd661b68b WHIRLPOOL f06ad77b2b9a2a8ab97a0bc3f88c95307fc15ef6b6cc101e8f0203f75a5d31fa0c58f7316d4c23200bb2ff4e433ec66088dc74034c427439fa07323c81e62c00
 MISC metadata.xml 2060 SHA256 b429e53e2871ea46a168e7a63ea948a3e222064f32e2a1239d278b14b03526ba SHA512 e83d9eb46d95c6d249c0a51875a2194904243c81ea30eafb1c5aaa2f9a604639c2aa23a32dc3408a8ce909e4d7508e857e9fa2d993cf950e30053ff348cc7daa WHIRLPOOL a74ad25f323e573aad6cc960adcfef9cf69d09a799d5acf66c004e223ed1b16d24cbebd4f0260095bfde62f4c652009cb1804f53c59b73a28fac6ce93f9992b0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDDJOQACgkQV3J2n04EauxW+wCeMQ0EvgkxhBOUBMu2mxNwwe7Y
-emYAn2GoPHHA/kYytJQkrI9hcaFUVyeK
-=Hul/
+iQIcBAEBCgAGBQJRULPbAAoJELp701BxlEWfsHwP/j4gB1/RrAhn+lUM76wDfbse
+tvlR4e2D/NgWd825/rwH0qedqVuBE5ynUludIMyx0pW6i9HKOeg8TvkGFisnsDG/
+mBNTmYtSW10KLe+M1xrH3wELo5xKhlWtQKCX2hNPAu/IptkGj5nyIeyZa688eMKw
+25t0eTcDkJKqqjmUs6RIEhfIb11u2u85TDbfaqBjUUDSKXNLtTLHD35OiNFsbLHa
+GELp8IJF3Em/n6PAX1wgJrbRyU473hxlIfyzHm7UuG55hum7uhhe9AtfghDveKTk
+qpJNSxCzd1d3m65k85Vs8J1He6sg896loUj5ONTPM4/Eh7XZjinjHruxNCRPeyyq
+6psGSDrpP+mlNNuUcT5A6A2EJ9yhQrx/tuggmdP8/+PsItYr0IGWjESdCHq1VhTU
+E2/6pXzewTL0Y9TO3tm9fZV+AI2pCj9QsMiwtsVd3cHHpX6b0rZ/+a3wg+MuxrM7
+y/fXkyiE/Hriq+f0mT0IdLMG2DmWaibdOr7vZzOjMahj0ZCaA55dhq1y+nBTDYy1
+bYnpi5UKcgsfztFnEJtFvRF54X5R8BbIIcVBk42iJGuu8Ll+m90U/wE1V7RG8faO
+35BpUeE6G22LH4KzHlOS0AsgDB5VGYSJ+RKXJ86Dz8pbovPxr4E/mgESj4/oTqXG
+uPBiMDrpp+HedrfUVKW7
+=t/GM
 -----END PGP SIGNATURE-----
