@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/locale-maketext-lexicon
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.77 2012/12/08 11:30:43 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.78 2013/03/25 20:30:18 ago Exp $
+
+  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org>
+  locale-maketext-lexicon-0.920.0.ebuild:
+  Stable for amd64, wrt bug #456590
 
 *locale-maketext-lexicon-0.920.0 (08 Dec 2012)
 
